--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>javaTraining</groupId>
     <artifactId>training</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>training</name>
     <description>Demo project for Spring Boot</description>
@@ -99,7 +99,6 @@
             <artifactId>jackson-core</artifactId>
             <version>2.9.5</version>
         </dependency>
-
 
     </dependencies>
 
