--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -6,3 +6,8 @@ error.generic=Something went wrong!
 error.duplicate.post=A post with this title already exists!
 error.invalid.data=The submitted data is invalid!
 error.invalid.grade=The grade can not be modified!
+error.create.directory=cannot create directory for uploaded file
+error.empty.file=Failed to store empty file
+error.relative.path=Cannot store file with relative path outside current directory
+error.store.file=Failed to store file
+
