--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect=org.postgresql.Driver
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.messages.basename=message
+spring.messages.basename=message, templates
+
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
+
+spring.thymeleaf.templates_root=src/main/resources/templates/
+build.version=@project.version@
+build.timestamp=@timestamp@
