--- a/src/main/resources/templates.properties
+++ b/src/main/resources/templates.properties
@@ -1,4 +1,5 @@
 post.latest=post/latestPosts
+post.content=post/postContent
 navigation=shared/navigation
 header=shared/fragments/header
 layout.main=shared/mainLayout
